# ai-wedge-coach

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  install.sh  pyproject.toml
agents/: openai.yaml
examples/cuibono/: experiment_log.md  founder_state.md  interview_log.md  market_research_log.md  objection_log.md  state.md  wedge_graveyard.md
examples/golden/: help.md  implicit-kickoff-story.md  kickoff-bare.md  kickoff-discovery.md  kickoff-readback.md  progress-routes-to-kickoff.md  wedge-clarify.md  wedge-diagnosis.md
references/: archetypes.md  cohort-memory.md  conversation-protocol.md  diagnosis-trees.md  guided-flow.md  market-research.md  rubrics.md  state-system.md
references/commands/: evals.md  experiment.md  help.md  icp.md  kickoff.md  objections.md  pivot.md  progress.md  research.md  signals.md  trust.md  wedge.md
scripts/: verify_docs.sh
src/wedge_coach/: __init__.py  __main__.py  cli.py  markdown_state.py  models.py  prompts.py  providers.py  render.py  storage.py
tests/: test_cli.py
