[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wedge-coach"
version = "0.1.0"
description = "CLI-first wedge coach for early-stage B2B AI founders."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0.0",
]

[project.scripts]
wedge-coach = "wedge_coach.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
